animation added to the nav

--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
     <title>Food-House</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <!-- <img id="logo" src="image/logo.jpg" alt="logo" /> -->
+        <ul>
+          <li><a href="#order-food">Home</a></li>
+          <li><a href="#about-me">About Me</a></li>
+          <li><a href="#recipie">Recipies</a></li>
+        </ul>
+      </nav>
+    </header>
     <section id="order-food">
       <div class="half-side text-side">
         <h1>
