--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <title>Food-House</title>
   </head>
   <body>
-    <header>
+    <header id="nav-sec">
       <nav>
-        <!-- <img id="logo" src="image/logo.jpg" alt="logo" /> -->
+        <img id="logo" src="image/logo.jpg" alt="logo" />
         <ul>
           <li><a href="#order-food">Home</a></li>
           <li><a href="#about-me">About Me</a></li>
